--- a/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp.csproj
+++ b/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp.csproj
@@ -49,11 +49,11 @@
     <Compile Include="Bar.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Form_Setting.cs">
+    <Compile Include="ModulSetting_Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form_Setting.Designer.cs">
-      <DependentUpon>Form_Setting.cs</DependentUpon>
+    <Compile Include="ModulSetting_Form.Designer.cs">
+      <DependentUpon>ModulSetting_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="Communication.cs" />
     <Compile Include="Form1.cs">
@@ -62,13 +62,14 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModulSetting_Data.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form_Setting.resx">
-      <DependentUpon>Form_Setting.cs</DependentUpon>
+    <EmbeddedResource Include="ModulSetting_Form.resx">
+      <DependentUpon>ModulSetting_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
