--- a/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp.csproj
+++ b/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppSetting.cs" />
     <Compile Include="Bar.cs">
       <SubType>Component</SubType>
     </Compile>
