--- a/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp.csproj
+++ b/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp/HV_Power_Supply_PcApp.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{CE4675DA-C717-4ED1-94A1-AF9A2650E0A0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>HV_Power_Supply_GUI_ver._1</RootNamespace>
-    <AssemblyName>HV_Power_Supply_GUI_ver.1</AssemblyName>
+    <AssemblyName>HV_Power_Supply</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
